objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the account is an in-active account: An In-active is defined as account is no longer engaged with Noesis</inlineHelpText>
        <label>Account Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Management_Territory2__c</fullName>
        <formula>CASE( Company_Headquarter_State__c, 
&quot;Alabama&quot;,&quot;Katrina&quot;, 
&quot;Arkansas&quot;,&quot;Katrina&quot;,
&quot;Florida&quot;,&quot;Katrina&quot;,
&quot;Georgia&quot;,&quot;Katrina&quot;,
&quot;Kentucky&quot;,&quot;Katrina&quot;,
&quot;Louisiana&quot;,&quot;Katrina&quot;,
&quot;New York&quot;,&quot;Katrina&quot;,
&quot;Maryland&quot;,&quot;Katrina&quot;,
&quot;Mississippi&quot;,&quot;Katrina&quot;,
&quot;North Carolina&quot;,&quot;Katrina&quot;,
&quot;South Carolina&quot;,&quot;Katrina&quot;,
&quot;Tennessee&quot;,&quot;Katrina&quot;,
&quot;Virginia&quot;,&quot;Katrina&quot;,
&quot;Washington DC&quot;,&quot;Katrina&quot;,
&quot;West Virginia&quot;,&quot;Katrina&quot;,
&quot;Virgin Islands, U.S.&quot;,&quot;Katrina&quot;,
&quot;US Virgin Islands&quot;,&quot;Katrina&quot;,
&quot;Puerto Rico&quot;,&quot;Katrina&quot;,
&quot;Guam&quot;,&quot;Katrina&quot;,
&quot;Connecticut&quot;,&quot;Katrina&quot;, 
&quot;Delaware&quot;,&quot;Katrina&quot;,
&quot;Maine&quot;,&quot;Katrina&quot;,
&quot;Massachusetts&quot;,&quot;Katrina&quot;,
&quot;New Hampshire&quot;,&quot;Katrina&quot;,
&quot;New Jersey&quot;,&quot;Katrina&quot;,
&quot;Ohio&quot;,&quot;Colangelo&quot;,
&quot;Pennsylvania&quot;,&quot;Katrina&quot;,
&quot;Rhode Island&quot;,&quot;Katrina&quot;,
&quot;Vermont&quot;,&quot;Katrina&quot;,
&quot;Quebec&quot;,&quot;Colangelo&quot;,
&quot;Newfoundland&quot;,&quot;Colangelo&quot;,
&quot;Prince Edward Island&quot;,&quot;Colangelo&quot;,
&quot;New Brunswick&quot;,&quot;Colangelo&quot;,
&quot;Nova Scotia&quot;,&quot;Colangelo&quot;,
&quot;Illinois&quot;,&quot;Colangelo&quot;,
&quot;Indiana&quot;,&quot;Colangelo&quot;,
&quot;Iowa&quot;,&quot;Colangelo&quot;,
&quot;Kansas&quot;,&quot;Colangelo&quot;,
&quot;Michigan&quot;,&quot;Colangelo&quot;,
&quot;Minnesota&quot;,&quot;Colangelo&quot;,
&quot;Missouri&quot;,&quot;Colangelo&quot;,
&quot;Nebraska&quot;,&quot;Colangelo&quot;,
&quot;North Dakota&quot;,&quot;Roger&quot;,
&quot;Oklahoma&quot;,&quot;Colangelo&quot;,
&quot;South Dakota&quot;,&quot;Roger&quot;,
&quot;Texas&quot;,&quot;Colangelo&quot;,
&quot;Wisconsin&quot;,&quot;Colangelo&quot;,
&quot;Ontario&quot;,&quot;Katrina&quot;,
&quot;Manitoba&quot;,&quot;Roger&quot;,
&quot;Nunavut&quot;,&quot;Roger&quot;,
&quot;Northwest Territories&quot;,&quot;Roger&quot;,
&quot;Alaska&quot;,&quot;Roger&quot;,
&quot;Arizona&quot;,&quot;Roger&quot;,
&quot;California&quot;,&quot;Roger&quot;,
&quot;Colorado&quot;,&quot;Roger&quot;,
&quot;Hawaii&quot;,&quot;Roger&quot;,
&quot;Idaho&quot;,&quot;Roger&quot;,
&quot;Montana&quot;,&quot;Roger&quot;,
&quot;Nevada&quot;,&quot;Roger&quot;,
&quot;New Mexico&quot;,&quot;Roger&quot;,
&quot;Oregon&quot;,&quot;Roger&quot;,
&quot;Utah&quot;,&quot;Roger&quot;,
&quot;Washington&quot;,&quot;Roger&quot;,
&quot;Wyoming&quot;,&quot;Roger&quot;,
&quot;British Columbia&quot;,&quot;Roger&quot;,
&quot;Alberta&quot;,&quot;Roger&quot;,
&quot;Yukon&quot;,&quot;Roger&quot;,
&quot;Saskatchewan&quot;,&quot;Roger&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Management Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Territory2__c</fullName>
        <label>Account Manager Territory</label>
        <picklist>
            <picklistValues>
                <fullName>Colangelo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Katrina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tracy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Territory_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Manager Territory Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Notes__c</fullName>
        <label>Account Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Account_Sales_Reps__c</fullName>
        <inlineHelpText>Enter the number of project developer sales reps for this account</inlineHelpText>
        <label># Account Sales Reps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Subscription_Type__c</fullName>
        <label>Account Subscription Type</label>
        <picklist>
            <picklistValues>
                <fullName>One-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Technology_Territory__c</fullName>
        <formula>CASE( Primary_Technology_Type__c  , 
&quot;CO=Controls&quot;,&quot;Katrina&quot;, 
&quot;HV=HVAC&quot;,&quot;Katrina&quot;, 
&quot;DR=Deep Retrofit&quot;,&quot;Katrina&quot;, 
&quot;O=Other&quot;,&quot;Katrina&quot;, 
&quot;LI=Lighting&quot;,&quot;Roger&quot;, 
&quot;SO=Solar&quot;,&quot;Roger&quot;, 
&quot;&quot;)</formula>
        <label>Account Technology Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <picklist>
            <picklistValues>
                <fullName>&lt;$2M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$2M-$4.9M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5M-$9.9M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10M+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Average_Project_Size__c</fullName>
        <label>Average Project Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancellation_or_Non_Renewal_Date__c</fullName>
        <inlineHelpText>Select the date that the customer would like to cancel/or not renew date</inlineHelpText>
        <label>Cancellation or Non-Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cayla_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cayla Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closing_Fee__c</fullName>
        <label>Closing Fee</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Company_Headquarter_State__c</fullName>
        <label>Company Headquarter State</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <picklist>
            <picklistValues>
                <fullName>1-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101-250</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>251-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1001+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_question__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Custom_Path_2__c</fullName>
        <label>Custom Path 2</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Path_3__c</fullName>
        <label>Custom Path 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Relationship_Type__c</fullName>
        <label>Customer Relationship Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Buy Side</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sell Side</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Customer_quality_index__c</fullName>
        <label>Customer quality index</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Developer_Index__c</fullName>
        <label>Developer Index</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Developer_Profile_Receipt_Date__c</fullName>
        <label>Developer Profile Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Developer_Profile_Request_Date__c</fullName>
        <label>Developer Profile Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Developer_Rebate__c</fullName>
        <inlineHelpText>The respective Rebate that corresponds to the Annual project volume</inlineHelpText>
        <label>Developer Rebate</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_SSA_Discussion__c</fullName>
        <label>Developer SSA Discussion Results</label>
        <picklist>
            <picklistValues>
                <fullName>SSA Candidate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSA Introduction/Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed SSA Sent to Hannon for Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lender Approved SSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lender Declined SSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Developer Declined SSA Financing Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSA Kick-Off/Traning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Developer_Score__c</fullName>
        <label>Developer Score</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Project_Proposals_Per_Year__c</fullName>
        <label>Estimated # Project Proposals Per Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Financing__c</fullName>
        <label>Completed Financing Conversations</label>
        <picklist>
            <picklistValues>
                <fullName>Operating Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efficiency Performance Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Savings Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Loan</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Funded_Project_Amount__c</fullName>
        <inlineHelpText>Select the respective annually funded project tier</inlineHelpText>
        <label>Funded Project Amount</label>
        <picklist>
            <picklistValues>
                <fullName>$1M&lt;$3M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$3M&lt;$5M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5M+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funded_Project_Year__c</fullName>
        <inlineHelpText>Select the project year for which the annually funded amount equates to</inlineHelpText>
        <label>Funded Project Year</label>
        <picklist>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Garden_Address__c</fullName>
        <description>Custom garden address for this company (i.e. https://traneoregon.noesisenergy.com)</description>
        <inlineHelpText>Enter the garden address.   If this user is in the Noesis Garden, this is simply https://www.noesisenergy.com/</inlineHelpText>
        <label>Garden Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Kickoff_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kickoff Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <picklist>
            <picklistValues>
                <fullName>Select original source of lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GGR List</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Customer_Onboard_Year__c</fullName>
        <label>New Customer: Onboard Year</label>
        <picklist>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Renewal_Date__c</fullName>
        <label>New Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Noesis_Executive_Onsite_Visit_Date__c</fullName>
        <label>Noesis Executive Onsite Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Orig_Registration_Date__c</fullName>
        <label>Orig Registration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Orig_Renewal_Date2__c</fullName>
        <label>Orig Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Origination_Owner__c</fullName>
        <label>Origination Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Dawn Jabour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kellie Newsome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roger Dowie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shannon Mcaulay</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <label>Parent Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Success_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Success Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Advantage_Conversation_D__c</fullName>
        <label>Payment Advantage  Conversation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Advantage_Package_Option__c</fullName>
        <label>Payment_Advantage_ Package Option</label>
        <picklist>
            <picklistValues>
                <fullName>Tier I=Promo I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier II=Promo II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Base Option</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Performance_Rebate_Conversation_Date__c</fullName>
        <label>Performance Rebate Conversation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Performance_Rebate_Participant__c</fullName>
        <label>Performance Rebate Participant</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Fund_Finance_Lender__c</fullName>
        <label>Pre-Fund Finance Lender</label>
        <picklist>
            <picklistValues>
                <fullName>Ascentium Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Fund__c</fullName>
        <label>Pre-Fund %</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pre_Funding_Qualified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check the box if the account has been qualified for pre-funding</inlineHelpText>
        <label>Pre-Funding Qualified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Business_Type__c</fullName>
        <label>Primary Business Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Technology_Type__c</fullName>
        <label>Primary Technology Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pro_Type__c</fullName>
        <label>Pro Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pro_Types__c</fullName>
        <label>Pro Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pro (Front Office and M&amp;V)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Front Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Front Office 90 Day Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro M&amp;V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noesis Financing Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B2B Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Engagement</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Pro_User_Logins__c</fullName>
        <inlineHelpText>Enter the # of Pro User logins for this Developer Account</inlineHelpText>
        <label># Pro User Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quickstart_Path__c</fullName>
        <label>Quickstart Path</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reference Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Conversation_Date__c</fullName>
        <label>Renewal Conversation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Decline_Reason__c</fullName>
        <label>Renewal Decline Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Financing Vehicles not Sufficient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No lift in Projects Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decreased Sales Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason not Given</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Services not Their Focus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Software Issues</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Effort__c</fullName>
        <label>Renewal Effort</label>
        <picklist>
            <picklistValues>
                <fullName>Q1, 2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2,2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3, 2015</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Pro_Type__c</fullName>
        <label>Renewal Pro Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Renewal_Reason__c</fullName>
        <label>Renewal Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Reduced Sales Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase in Projects Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financing Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3IA Services/Analysis</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SQL_Types_List__c</fullName>
        <label>SQL Types List</label>
        <picklist>
            <picklistValues>
                <fullName>Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SSA_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if approved for SSA Financing Vehicle</inlineHelpText>
        <label>SSA Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selected_Noesis_Financing__c</fullName>
        <label>Selected Noesis Financing</label>
        <picklist>
            <picklistValues>
                <fullName>Operating Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PACE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Efficiency Performance Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Savings Agreement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Loan</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Services_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person in services responsible for this account</description>
        <label>Services Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Setup_Completed__c</fullName>
        <label>Setup Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Lead_Index__c</fullName>
        <label>Target Lead Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Top_Account_Expiration_Date__c</fullName>
        <label>Top Account Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Top_Account_Owner__c</fullName>
        <label>Top Account Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Katrina Polansky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matt Colangelo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roger Dowie</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Top_Account_Ranking__c</fullName>
        <label>Top Account Ranking</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Top_Account_Start_Date__c</fullName>
        <label>Top Account Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Top_User_Email__c</fullName>
        <label>Top User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Top_User_Name__c</fullName>
        <label>Top User First &amp; Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_User_Phone__c</fullName>
        <label>Top User Phone #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Total_Funded_Project_Amount__c</fullName>
        <inlineHelpText>Enter the total funded project $ amount over multiple years</inlineHelpText>
        <label>Total Funded Project Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Project_Counts__c</fullName>
        <label>Total Project Counts</label>
        <summarizedField>Opportunity.Project_Count2__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Services_Opportunity__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Duplicate_EBP__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Proposal_Amount__c</fullName>
        <label>Total Proposal Amount</label>
        <summarizedField>Opportunity.Proposal_Amount2__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Services_Opportunity__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Duplicate_EBP__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Won_Project_Counts__c</fullName>
        <label>Total Won Project Counts</label>
        <summarizedField>Opportunity.Project_Won_Count__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Services_Opportunity__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Duplicate_EBP__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Won_Proposal_Amount__c</fullName>
        <label>Total Won Proposal Amount</label>
        <summarizedField>Opportunity.Proposal_Won_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Services_Opportunity__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Duplicate_EBP__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Upsell_Pro_Type__c</fullName>
        <label>Upsell Products</label>
        <picklist>
            <picklistValues>
                <fullName>Advantage to Advantage PLUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advantage PLUS to Pro w/Advantage PLUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro to Pro W/Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro to Pro w/Advantage PLUS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>User_Activity_and_EBP_Information__c</fullName>
        <label>User Activity and EBP Information</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>User_Provisioning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Provisioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2014_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2014 Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2015_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2015 Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X4_9_Participant_Conversation_Date__c</fullName>
        <label>4.9% Participant Conversation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X4_9_Participant__c</fullName>
        <label>4.9% Participant</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zendesk__Domain_Mapping__c</fullName>
        <label>Domain Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>